labs/2/cool.output
Terminals unused in grammar

   ERROR


State 11 conflicts: 1 shift/reduce
State 16 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS error ';'

    7 feature_list: /* empty */
    8             | feature
    9             | feature_list feature

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID ';'

   13 formal_list: /* empty */
   14            | formal
   15            | formal_list ',' formal

   16 formal: OBJECTID ':' TYPEID

   17 branch_list: branch
   18            | branch_list branch

   19 branch: OBJECTID ':' TYPEID DARROW expr ';'

   20 comma_expr_list: /* empty */
   21                | expr
   22                | comma_expr_list ',' expr

   23 smcl_expr_list: expr ';'
   24               | smcl_expr_list expr ';'

   25 expr: OBJECTID ASSIGN expr
   26     | expr '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr '.' OBJECTID '(' comma_expr_list ')'
   28     | IF expr THEN expr ELSE expr FI
   29     | WHILE expr LOOP expr POOL
   30     | CASE expr OF branch_list ESAC
   31     | '{' smcl_expr_list '}'
   32     | LET OBJECTID ':' TYPEID IN expr
   33     | expr '+' expr
   34     | expr '-' expr
   35     | expr '*' expr
   36     | expr '/' expr
   37     | '~' expr
   38     | expr '<' expr
   39     | expr '=' expr
   40     | expr LE expr
   41     | NOT expr
   42     | '(' expr ')'
   43     | INT_CONST
   44     | BOOL_CONST
   45     | STR_CONST
   46     | NEW TYPEID
   47     | ISVOID expr
   48     | OBJECTID


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 26 27 42
')' (41) 10 26 27 42
'*' (42) 35
'+' (43) 33
',' (44) 15 22
'-' (45) 34
'.' (46) 26 27
'/' (47) 36
':' (58) 10 11 12 16 19 32
';' (59) 4 5 6 10 11 12 19 23 24
'<' (60) 38
'=' (61) 39
'@' (64) 26
'{' (123) 4 5 10 31
'}' (125) 4 5 10 31
'~' (126) 37
error (256) 6
CLASS (258) 4 5 6
ELSE (259) 28
FI (260) 28
IF (261) 28
IN (262) 32
INHERITS (263) 5
LET (264) 32
LOOP (265) 29
POOL (266) 29
THEN (267) 28
WHILE (268) 29
CASE (269) 30
ESAC (270) 30
OF (271) 30
DARROW (272) 19
NEW (273) 46
ISVOID (274) 47
STR_CONST (275) 45
INT_CONST (276) 43
BOOL_CONST (277) 44
TYPEID (278) 4 5 10 11 12 16 19 26 32 46
OBJECTID (279) 10 11 12 16 19 25 26 27 32 48
ASSIGN (280) 11 25
NOT (281) 41
LE (282) 40
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
feature_list (49)
    on left: 7 8 9, on right: 4 5 9
feature (50)
    on left: 10 11 12, on right: 8 9
formal_list (51)
    on left: 13 14 15, on right: 10 15
formal (52)
    on left: 16, on right: 14 15
branch_list (53)
    on left: 17 18, on right: 18 30
branch (54)
    on left: 19, on right: 17 18
comma_expr_list (55)
    on left: 20 21 22, on right: 22 26 27
smcl_expr_list (56)
    on left: 23 24, on right: 24 31
expr (57)
    on left: 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42
    43 44 45 46 47 48, on right: 10 11 19 21 22 23 24 25 26 27 28 29
    30 32 33 34 35 36 37 38 39 40 41 42 47


state 0

    0 $accept: . program $end

    CLASS  shift, and go to state 1

    program     go to state 2
    class_list  go to state 3
    class       go to state 4


state 1

    4 class: CLASS . TYPEID '{' feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' feature_list '}' ';'
    6      | CLASS . error ';'

    error   shift, and go to state 5
    TYPEID  shift, and go to state 6


state 2

    0 $accept: program . $end

    $end  shift, and go to state 7


state 3

    1 program: class_list .
    3 class_list: class_list . class

    CLASS  shift, and go to state 1

    $default  reduce using rule 1 (program)

    class  go to state 8


state 4

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 5

    6 class: CLASS error . ';'

    ';'  shift, and go to state 9


state 6

    4 class: CLASS TYPEID . '{' feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' feature_list '}' ';'

    INHERITS  shift, and go to state 10
    '{'       shift, and go to state 11


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    6 class: CLASS error ';' .

    $default  reduce using rule 6 (class)


state 10

    5 class: CLASS TYPEID INHERITS . TYPEID '{' feature_list '}' ';'

    TYPEID  shift, and go to state 12


state 11

    4 class: CLASS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 14
    feature       go to state 15


state 12

    5 class: CLASS TYPEID INHERITS TYPEID . '{' feature_list '}' ';'

    '{'  shift, and go to state 16


state 13

   10 feature: OBJECTID . '(' formal_list ')' ':' TYPEID '{' expr '}' ';'
   11        | OBJECTID . ':' TYPEID ASSIGN expr ';'
   12        | OBJECTID . ':' TYPEID ';'

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


state 14

    4 class: CLASS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 19

    feature  go to state 20


state 15

    8 feature_list: feature .

    $default  reduce using rule 8 (feature_list)


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . feature_list '}' ';'

    OBJECTID  shift, and go to state 13

    OBJECTID  [reduce using rule 7 (feature_list)]
    $default  reduce using rule 7 (feature_list)

    feature_list  go to state 21
    feature       go to state 15


state 17

   10 feature: OBJECTID '(' . formal_list ')' ':' TYPEID '{' expr '}' ';'

    OBJECTID  shift, and go to state 22

    $default  reduce using rule 13 (formal_list)

    formal_list  go to state 23
    formal       go to state 24


state 18

   11 feature: OBJECTID ':' . TYPEID ASSIGN expr ';'
   12        | OBJECTID ':' . TYPEID ';'

    TYPEID  shift, and go to state 25


state 19

    4 class: CLASS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 26


state 20

    9 feature_list: feature_list feature .

    $default  reduce using rule 9 (feature_list)


state 21

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list . '}' ';'
    9 feature_list: feature_list . feature

    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 27

    feature  go to state 20


state 22

   16 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 28


state 23

   10 feature: OBJECTID '(' formal_list . ')' ':' TYPEID '{' expr '}' ';'
   15 formal_list: formal_list . ',' formal

    ')'  shift, and go to state 29
    ','  shift, and go to state 30


state 24

   14 formal_list: formal .

    $default  reduce using rule 14 (formal_list)


state 25

   11 feature: OBJECTID ':' TYPEID . ASSIGN expr ';'
   12        | OBJECTID ':' TYPEID . ';'

    ASSIGN  shift, and go to state 31
    ';'     shift, and go to state 32


state 26

    4 class: CLASS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 27

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' . ';'

    ';'  shift, and go to state 33


state 28

   16 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 34


state 29

   10 feature: OBJECTID '(' formal_list ')' . ':' TYPEID '{' expr '}' ';'

    ':'  shift, and go to state 35


state 30

   15 formal_list: formal_list ',' . formal

    OBJECTID  shift, and go to state 22

    formal  go to state 36


state 31

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr ';'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 51


state 32

   12 feature: OBJECTID ':' TYPEID ';' .

    $default  reduce using rule 12 (feature)


state 33

    5 class: CLASS TYPEID INHERITS TYPEID '{' feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 34

   16 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 16 (formal)


state 35

   10 feature: OBJECTID '(' formal_list ')' ':' . TYPEID '{' expr '}' ';'

    TYPEID  shift, and go to state 52


state 36

   15 formal_list: formal_list ',' formal .

    $default  reduce using rule 15 (formal_list)


state 37

   28 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 53


state 38

   32 expr: LET . OBJECTID ':' TYPEID IN expr

    OBJECTID  shift, and go to state 54


state 39

   29 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 55


state 40

   30 expr: CASE . expr OF branch_list ESAC

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 56


state 41

   46 expr: NEW . TYPEID

    TYPEID  shift, and go to state 57


state 42

   47 expr: ISVOID . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 58


state 43

   45 expr: STR_CONST .

    $default  reduce using rule 45 (expr)


state 44

   43 expr: INT_CONST .

    $default  reduce using rule 43 (expr)


state 45

   44 expr: BOOL_CONST .

    $default  reduce using rule 44 (expr)


state 46

   25 expr: OBJECTID . ASSIGN expr
   48     | OBJECTID .

    ASSIGN  shift, and go to state 59

    $default  reduce using rule 48 (expr)


state 47

   41 expr: NOT . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 60


state 48

   37 expr: '~' . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 61


state 49

   31 expr: '{' . smcl_expr_list '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    smcl_expr_list  go to state 62
    expr            go to state 63


state 50

   42 expr: '(' . expr ')'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 64


state 51

   11 feature: OBJECTID ':' TYPEID ASSIGN expr . ';'
   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    LE   shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '.'  shift, and go to state 70
    '@'  shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    ';'  shift, and go to state 74


state 52

   10 feature: OBJECTID '(' formal_list ')' ':' TYPEID . '{' expr '}' ';'

    '{'  shift, and go to state 75


state 53

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   28     | IF expr . THEN expr ELSE expr FI
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    THEN  shift, and go to state 76
    LE    shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 70
    '@'   shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73


state 54

   32 expr: LET OBJECTID . ':' TYPEID IN expr

    ':'  shift, and go to state 77


state 55

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   29     | WHILE expr . LOOP expr POOL
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    LOOP  shift, and go to state 78
    LE    shift, and go to state 65
    '+'   shift, and go to state 66
    '-'   shift, and go to state 67
    '*'   shift, and go to state 68
    '/'   shift, and go to state 69
    '.'   shift, and go to state 70
    '@'   shift, and go to state 71
    '<'   shift, and go to state 72
    '='   shift, and go to state 73


state 56

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   30     | CASE expr . OF branch_list ESAC
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    OF   shift, and go to state 79
    LE   shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '.'  shift, and go to state 70
    '@'  shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73


state 57

   46 expr: NEW TYPEID .

    $default  reduce using rule 46 (expr)


state 58

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr
   47     | ISVOID expr .

    LE   shift, and go to state 65
    '<'  shift, and go to state 72
    '='  shift, and go to state 73

    $default  reduce using rule 47 (expr)


state 59

   25 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '('         shift, and go to state 50

    expr  go to state 80


state 60

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr
   41     | NOT expr .

    LE   shift, and go to state 65
    '<'  shift, and go to state 72
    '='  shift, and go to state 73

    $default  reduce using rule 41 (expr)


state 61

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   37     | '~' expr .
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    LE   shift, and go to state 65
    '<'  shift, and go to state 72
    '='  shift, and go to state 73

    $default  reduce using rule 37 (expr)


state 62

   24 smcl_expr_list: smcl_expr_list . expr ';'
   31 expr: '{' smcl_expr_list . '}'

    IF          shift, and go to state 37
    LET         shift, and go to state 38
    WHILE       shift, and go to state 39
    CASE        shift, and go to state 40
    NEW         shift, and go to state 41
    ISVOID      shift, and go to state 42
    STR_CONST   shift, and go to state 43
    INT_CONST   shift, and go to state 44
    BOOL_CONST  shift, and go to state 45
    OBJECTID    shift, and go to state 46
    NOT         shift, and go to state 47
    '~'         shift, and go to state 48
    '{'         shift, and go to state 49
    '}'         shift, and go to state 81
    '('         shift, and go to state 50

    expr  go to state 82


state 63

   23 smcl_expr_list: expr . ';'
   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr

    LE   shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '.'  shift, and go to state 70
    '@'  shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    ';'  shift, and go to state 83


state 64

   26 expr: expr . '@' TYPEID '.' OBJECTID '(' comma_expr_list ')'
   27     | expr . '.' OBJECTID '(' comma_expr_list ')'
   33     | expr . '+' expr
   34     | expr . '-' expr
   35     | expr . '*' expr
   36     | expr . '/' expr
   38     | expr . '<' expr
   39     | expr . '=' expr
   40     | expr . LE expr
   42     | '(' expr . ')'

    LE   shift, and go to state 65
    '+'  shift, and go to state 66
    '-'  shift, and go to state 67
    '*'  shift, and go to state 68
    '/'  shift, and go to state 69
    '.'  shift, and go to state 70
    '@'  shift, and go to state 71
    '<'  shift, and go to state 72
    '='  shift, and go to state 73
    ')'  shift, and go to state 84


state 65

   40 expr: expr LE . expr
